--- a/package.json
+++ b/package.json
@@ -30,14 +30,18 @@
   "dependencies": {
     "@architect/architect": "^10.2.1",
     "@architect/functions": "^5.0.4",
+    "@react-three/drei": "^8.20.2",
+    "@react-three/fiber": "^7.0.27",
     "@remix-run/architect": "^1.3.4",
     "@remix-run/node": "^1.3.4",
     "@remix-run/react": "^1.3.4",
     "@remix-run/server-runtime": "^1.3.4",
+    "antd": "^4.19.5",
     "bcryptjs": "2.4.3",
     "cuid": "^2.1.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "remix-utils": "^3.0.0",
     "tiny-invariant": "^1.2.0"
   },
   "devDependencies": {
@@ -53,6 +57,7 @@
     "@types/eslint": "^8.4.1",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
+    "@types/three": "^0.139.0",
     "@vitejs/plugin-react": "^1.3.0",
     "c8": "^7.11.0",
     "cross-env": "^7.0.3",
